# portable-python-template

./: .env  1_0_setup.bat  1_0_setup.sh  1_1_install_notepad.bat  1_1_install_winmerge.bat  2_0_run_app.bat  2_0_run_app.sh  README.md  activate_virtualenv.bat  pyproject.toml
app/: app.py
